--- a/pr-preview/pr-44/using-git/choosing-your-git-editor.html
+++ b/pr-preview/pr-44/using-git/choosing-your-git-editor.html
@@ -4,8 +4,10 @@
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
         <title>Choosing your Git editor - Git is my lab book</title>
+
+
         <!-- Custom HTML head -->
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+        
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -16,9 +18,11 @@
         <link rel="stylesheet" href="../css/general.css">
         <link rel="stylesheet" href="../css/chrome.css">
         <link rel="stylesheet" href="../css/print.css" media="print">
+
         <!-- Fonts -->
         <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
         <link rel="stylesheet" href="../fonts/fonts.css">
+
         <!-- Highlight.js Stylesheets -->
         <link rel="stylesheet" href="../highlight.css">
         <link rel="stylesheet" href="../tomorrow-night.css">
@@ -29,16 +33,17 @@
         <link rel="stylesheet" href="../tabbed-code-blocks.css">
         <link rel="stylesheet" href="../asciinema/asciinema-player.css">
         <link rel="stylesheet" href="../asciinema/asciinema-theme-dracula.css">
+
     </head>
     <body>
         <!-- Provide site root to javascript -->
-        <script type="text/javascript">
+        <script>
             var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
-        <script type="text/javascript">
+        <script>
             try {
                 var theme = localStorage.getItem('mdbook-theme');
                 var sidebar = localStorage.getItem('mdbook-sidebar');
@@ -54,7 +59,7 @@
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
-        <script type="text/javascript">
+        <script>
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
@@ -66,7 +71,7 @@
         </script>
 
         <!-- Hide / unhide sidebar before it is displayed -->
-        <script type="text/javascript">
+        <script>
             var html = document.querySelector('html');
             var sidebar = 'hidden';
             if (document.body.clientWidth >= 1080) {
@@ -87,7 +92,7 @@
         <div id="page-wrapper" class="page-wrapper">
 
             <div class="page">
-                <div id="menu-bar-hover-placeholder"></div>
+                                <div id="menu-bar-hover-placeholder"></div>
                 <div id="menu-bar" class="menu-bar sticky bordered">
                     <div class="left-buttons">
                         <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
@@ -97,7 +102,7 @@
                             <i class="fa fa-paint-brush"></i>
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
-                            <li role="none"><button role="menuitem" class="theme" id="light">Light (default)</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
@@ -120,6 +125,7 @@
                         <a href="https://github.com/robmoss/git-is-my-lab-book/edit/master/src/using-git/choosing-your-git-editor.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
+
                     </div>
                 </div>
 
@@ -133,8 +139,9 @@
                         </ul>
                     </div>
                 </div>
+
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-                <script type="text/javascript">
+                <script>
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                     document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
                     Array.from(document.querySelectorAll('#sidebar a')).forEach(function(link) {
@@ -149,9 +156,8 @@
 See below for brief instructions on how to use these editors.</p>
 <div id="admonition-tip" class="admonition tip">
 <div class="admonition-title">
-<a class="admonition-anchor-link" href="#admonition-tip">
 <p>Tip</p>
-</a>
+<p><a class="admonition-anchor-link" href="#admonition-tip"></a></p>
 </div>
 <div>
 <p>This editor is <strong>only used for writing commit messages</strong>.
@@ -170,14 +176,14 @@ document.addEventListener("DOMContentLoaded", function(){
 </script>
 </div>
 <h2 id="how-to-use-nano"><a class="header" href="#how-to-use-nano">How to use nano</a></h2>
-<p>Once you have written your commit message, press <code>Ctrl+O</code> to save the commit message, then press <code>Ctrl+X</code> to quit the editor.</p>
-<p><strong>To quit without saving</strong> press <code>Ctrl+X</code>.
+<p>Once you have written your commit message, press <kbd>Ctrl</kbd> + <kbd>O</kbd> and then <kbd>Enter</kbd> to save the commit message, then press <kbd>Ctrl</kbd> + <kbd>X</kbd> to quit the editor.</p>
+<p><strong>To quit without saving</strong> press <kbd>Ctrl</kbd> + <kbd>X</kbd>.
 If you have made any changes, <code>nano</code> will ask if you want to save them.
-Press <code>n</code> to quit without saving these changes.</p>
+Press <kbd>n</kbd> to quit without saving these changes.</p>
 <h2 id="how-to-use-vim"><a class="header" href="#how-to-use-vim">How to use vim</a></h2>
-<p>You need to press <code>i</code> (switch to insert mode) before you can write your commit message.
-Once you have written your commit message, press <code>Esc</code> and then type <code>:wq</code> to save your changes and quit the editor.</p>
-<p><strong>To quit without saving</strong> press <code>Esc</code> and then type <code>:q!</code>.</p>
+<p>You need to press <kbd>i</kbd> (switch to insert mode) before you can write your commit message.
+Once you have written your commit message, press <kbd>Esc</kbd> and then type <kbd>:wq</kbd> to save your changes and quit the editor.</p>
+<p><strong>To quit without saving</strong> press <kbd>Esc</kbd> and then type <kbd>:q!</kbd>.</p>
 
                     </main>
 
@@ -186,9 +192,11 @@ Once you have written your commit message, press <code>Esc</code> and then type 
                             <a rel="prev" href="../using-git/first-time-git-setup.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
+
                             <a rel="next" href="../using-git/creating-a-repository.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
+
                         <div style="clear: both"></div>
                     </nav>
                 </div>
@@ -198,6 +206,7 @@ Once you have written your commit message, press <code>Esc</code> and then type 
                     <a rel="prev" href="../using-git/first-time-git-setup.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
+
                     <a rel="next" href="../using-git/creating-a-repository.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
@@ -205,18 +214,26 @@ Once you have written your commit message, press <code>Esc</code> and then type 
 
         </div>
 
-        <script type="text/javascript">
+
+
+
+        <script>
             window.playground_copyable = true;
         </script>
-        <script src="../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../searcher.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../book.js" type="text/javascript" charset="utf-8"></script>
+
+
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
+
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script type="text/javascript" src="../tabbed-code-blocks.js"></script>
-        <script type="text/javascript" src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../tabbed-code-blocks.js"></script>
+        <script src="../asciinema/asciinema-player.min.js"></script>
+
+
     </body>
 </html>
