--- a/pr-preview/pr-44/using-git/creating-a-commit.html
+++ b/pr-preview/pr-44/using-git/creating-a-commit.html
@@ -4,8 +4,10 @@
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
         <title>Creating a commit - Git is my lab book</title>
+
+
         <!-- Custom HTML head -->
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+        
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -16,9 +18,11 @@
         <link rel="stylesheet" href="../css/general.css">
         <link rel="stylesheet" href="../css/chrome.css">
         <link rel="stylesheet" href="../css/print.css" media="print">
+
         <!-- Fonts -->
         <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
         <link rel="stylesheet" href="../fonts/fonts.css">
+
         <!-- Highlight.js Stylesheets -->
         <link rel="stylesheet" href="../highlight.css">
         <link rel="stylesheet" href="../tomorrow-night.css">
@@ -29,16 +33,17 @@
         <link rel="stylesheet" href="../tabbed-code-blocks.css">
         <link rel="stylesheet" href="../asciinema/asciinema-player.css">
         <link rel="stylesheet" href="../asciinema/asciinema-theme-dracula.css">
+
     </head>
     <body>
         <!-- Provide site root to javascript -->
-        <script type="text/javascript">
+        <script>
             var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
-        <script type="text/javascript">
+        <script>
             try {
                 var theme = localStorage.getItem('mdbook-theme');
                 var sidebar = localStorage.getItem('mdbook-sidebar');
@@ -54,7 +59,7 @@
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
-        <script type="text/javascript">
+        <script>
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
@@ -66,7 +71,7 @@
         </script>
 
         <!-- Hide / unhide sidebar before it is displayed -->
-        <script type="text/javascript">
+        <script>
             var html = document.querySelector('html');
             var sidebar = 'hidden';
             if (document.body.clientWidth >= 1080) {
@@ -87,7 +92,7 @@
         <div id="page-wrapper" class="page-wrapper">
 
             <div class="page">
-                <div id="menu-bar-hover-placeholder"></div>
+                                <div id="menu-bar-hover-placeholder"></div>
                 <div id="menu-bar" class="menu-bar sticky bordered">
                     <div class="left-buttons">
                         <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
@@ -97,7 +102,7 @@
                             <i class="fa fa-paint-brush"></i>
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
-                            <li role="none"><button role="menuitem" class="theme" id="light">Light (default)</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
@@ -120,6 +125,7 @@
                         <a href="https://github.com/robmoss/git-is-my-lab-book/edit/master/src/using-git/creating-a-commit.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
+
                     </div>
                 </div>
 
@@ -133,8 +139,9 @@
                         </ul>
                     </div>
                 </div>
+
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-                <script type="text/javascript">
+                <script>
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                     document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
                     Array.from(document.querySelectorAll('#sidebar a')).forEach(function(link) {
@@ -159,9 +166,8 @@ This should be accompanied by <a href="../version-control/how-do-I-write-a-commi
 <p>We will now show how to perform these steps.</p>
 <div id="admonition-note" class="admonition note">
 <div class="admonition-title">
-<a class="admonition-anchor-link" href="#admonition-note">
 <p>Note</p>
-</a>
+<p><a class="admonition-anchor-link" href="#admonition-note"></a></p>
 </div>
 <div>
 <p>At any time, you can see a summary of the changes in your repository, and which ones are staged to be committed, by running:</p>
@@ -190,9 +196,8 @@ This should be accompanied by <a href="../version-control/how-do-I-write-a-commi
 <p>This will show you each of the changes in turn, and allow you select which ones to stage.</p>
 <div id="admonition-tip" class="admonition tip">
 <div class="admonition-title">
-<a class="admonition-anchor-link" href="#admonition-tip">
 <p>Tip</p>
-</a>
+<p><a class="admonition-anchor-link" href="#admonition-tip"></a></p>
 </div>
 <div>
 <p>This interactive selection mode is very flexible; you can enter <code>?</code> at any of the prompts to see the range of available actions.</p>
@@ -208,9 +213,8 @@ This should be accompanied by <a href="../version-control/how-do-I-write-a-commi
 </code></pre>
 <div id="admonition-tip-1" class="admonition tip">
 <div class="admonition-title">
-<a class="admonition-anchor-link" href="#admonition-tip-1">
 <p>Tip</p>
-</a>
+<p><a class="admonition-anchor-link" href="#admonition-tip-1"></a></p>
 </div>
 <div>
 <p>If the file has any uncommitted changes, git will refuse to remove the file.
@@ -233,9 +237,8 @@ You can undo staged changes to a file by running:</p>
 </code></pre>
 <div id="admonition-note-1" class="admonition note">
 <div class="admonition-title">
-<a class="admonition-anchor-link" href="#admonition-note-1">
 <p>Note</p>
-</a>
+<p><a class="admonition-anchor-link" href="#admonition-note-1"></a></p>
 </div>
 <div>
 <p>This <strong>will not modify</strong> the contents of the file.</p>
@@ -248,9 +251,8 @@ You can undo staged changes to a file by running:</p>
 <p>This will open your <a href="first-time-git-setup.html">chosen editor</a> and prompt you to write the <a href="../version-control/how-do-I-write-a-commit-message.html">commit message</a>.</p>
 <div id="admonition-tip-2" class="admonition tip">
 <div class="admonition-title">
-<a class="admonition-anchor-link" href="#admonition-tip-2">
 <p>Tip</p>
-</a>
+<p><a class="admonition-anchor-link" href="#admonition-tip-2"></a></p>
 </div>
 <div>
 <p>Note that the commit <strong>will not be created until you exit the editor</strong>.</p>
@@ -263,9 +265,8 @@ You can undo staged changes to a file by running:</p>
 Git provides a simple way of modifying the most recent commit.</p>
 <div id="admonition-warning" class="admonition warning">
 <div class="admonition-title">
-<a class="admonition-anchor-link" href="#admonition-warning">
 <p>Warning</p>
-</a>
+<p><a class="admonition-anchor-link" href="#admonition-warning"></a></p>
 </div>
 <div>
 <p><strong>Do not modify the commit</strong> if you have already pushed it to another repository.
@@ -286,9 +287,11 @@ Instead, record a new commit that includes the desired changes.</p>
                             <a rel="prev" href="../using-git/choosing-a-license.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
+
                             <a rel="next" href="../using-git/creating-a-remote-repository.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
+
                         <div style="clear: both"></div>
                     </nav>
                 </div>
@@ -298,6 +301,7 @@ Instead, record a new commit that includes the desired changes.</p>
                     <a rel="prev" href="../using-git/choosing-a-license.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
+
                     <a rel="next" href="../using-git/creating-a-remote-repository.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
@@ -305,18 +309,26 @@ Instead, record a new commit that includes the desired changes.</p>
 
         </div>
 
-        <script type="text/javascript">
+
+
+
+        <script>
             window.playground_copyable = true;
         </script>
-        <script src="../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../searcher.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../book.js" type="text/javascript" charset="utf-8"></script>
+
+
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
+
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script type="text/javascript" src="../tabbed-code-blocks.js"></script>
-        <script type="text/javascript" src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../tabbed-code-blocks.js"></script>
+        <script src="../asciinema/asciinema-player.min.js"></script>
+
+
     </body>
 </html>
