--- a/pr-preview/pr-44/using-git/inspecting-your-history.html
+++ b/pr-preview/pr-44/using-git/inspecting-your-history.html
@@ -4,8 +4,10 @@
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
         <title>Inspecting your history - Git is my lab book</title>
+
+
         <!-- Custom HTML head -->
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+        
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -16,9 +18,11 @@
         <link rel="stylesheet" href="../css/general.css">
         <link rel="stylesheet" href="../css/chrome.css">
         <link rel="stylesheet" href="../css/print.css" media="print">
+
         <!-- Fonts -->
         <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
         <link rel="stylesheet" href="../fonts/fonts.css">
+
         <!-- Highlight.js Stylesheets -->
         <link rel="stylesheet" href="../highlight.css">
         <link rel="stylesheet" href="../tomorrow-night.css">
@@ -29,16 +33,17 @@
         <link rel="stylesheet" href="../tabbed-code-blocks.css">
         <link rel="stylesheet" href="../asciinema/asciinema-player.css">
         <link rel="stylesheet" href="../asciinema/asciinema-theme-dracula.css">
+
     </head>
     <body>
         <!-- Provide site root to javascript -->
-        <script type="text/javascript">
+        <script>
             var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
-        <script type="text/javascript">
+        <script>
             try {
                 var theme = localStorage.getItem('mdbook-theme');
                 var sidebar = localStorage.getItem('mdbook-sidebar');
@@ -54,7 +59,7 @@
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
-        <script type="text/javascript">
+        <script>
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
@@ -66,7 +71,7 @@
         </script>
 
         <!-- Hide / unhide sidebar before it is displayed -->
-        <script type="text/javascript">
+        <script>
             var html = document.querySelector('html');
             var sidebar = 'hidden';
             if (document.body.clientWidth >= 1080) {
@@ -87,7 +92,7 @@
         <div id="page-wrapper" class="page-wrapper">
 
             <div class="page">
-                <div id="menu-bar-hover-placeholder"></div>
+                                <div id="menu-bar-hover-placeholder"></div>
                 <div id="menu-bar" class="menu-bar sticky bordered">
                     <div class="left-buttons">
                         <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
@@ -97,7 +102,7 @@
                             <i class="fa fa-paint-brush"></i>
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
-                            <li role="none"><button role="menuitem" class="theme" id="light">Light (default)</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
@@ -120,6 +125,7 @@
                         <a href="https://github.com/robmoss/git-is-my-lab-book/edit/master/src/using-git/inspecting-your-history.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
+
                     </div>
                 </div>
 
@@ -133,8 +139,9 @@
                         </ul>
                     </div>
                 </div>
+
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-                <script type="text/javascript">
+                <script>
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                     document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
                     Array.from(document.querySelectorAll('#sidebar a')).forEach(function(link) {
@@ -156,9 +163,8 @@ By default, this command will list every commit <strong>from the very first comm
 <p>There are many ways to adjust <strong>which commits</strong> and <strong>what details</strong> that <code>git log</code> will show.</p>
 <div id="admonition-tip" class="admonition tip">
 <div class="admonition-title">
-<a class="admonition-anchor-link" href="#admonition-tip">
 <p>Tip</p>
-</a>
+<p><a class="admonition-anchor-link" href="#admonition-tip"></a></p>
 </div>
 <div>
 <p>Each commit has a unique identifier (&quot;hash&quot;).
@@ -169,9 +175,8 @@ These hashes are quite long, but in general you only need to provide the first 5
 <p>You can limit which commits <code>git log</code> will show by specifying a start time and/or an end time.</p>
 <div id="admonition-tip-1" class="admonition tip">
 <div class="admonition-title">
-<a class="admonition-anchor-link" href="#admonition-tip-1">
 <p>Tip</p>
-</a>
+<p><a class="admonition-anchor-link" href="#admonition-tip-1"></a></p>
 </div>
 <div>
 <p>This can be extremely useful for generating <strong>progress reports</strong> and summarising your recent activity in team meetings.</p>
@@ -193,9 +198,8 @@ git log --since='1 week'
 </code></pre>
 <div id="admonition-info" class="admonition info">
 <div class="admonition-title">
-<a class="admonition-anchor-link" href="#admonition-info">
 <p>Info</p>
-</a>
+<p><a class="admonition-anchor-link" href="#admonition-info"></a></p>
 </div>
 <div>
 <p>Note the <code>--</code> argument that comes before the file name.
@@ -215,9 +219,8 @@ git show tag-name
 <p>This will show the commit details <strong>and</strong> all of the changes that were recorded in this commit.</p>
 <div id="admonition-tip-2" class="admonition tip">
 <div class="admonition-title">
-<a class="admonition-anchor-link" href="#admonition-tip-2">
 <p>Tip</p>
-</a>
+<p><a class="admonition-anchor-link" href="#admonition-tip-2"></a></p>
 </div>
 <div>
 <p>By default, <code>git show</code> will show you the most recent commit.</p>
@@ -227,9 +230,8 @@ git show tag-name
 <p>You can view all of the changes that were made between two commits with the <code>git diff</code> command.</p>
 <div id="admonition-tip-3" class="admonition tip">
 <div class="admonition-title">
-<a class="admonition-anchor-link" href="#admonition-tip-3">
 <p>Tip</p>
-</a>
+<p><a class="admonition-anchor-link" href="#admonition-tip-3"></a></p>
 </div>
 <div>
 <p>The <code>git diff</code> command shows the <strong>difference</strong> between two points in your commit history.</p>
@@ -295,9 +297,11 @@ index 7956b65..a34f907 100644
                             <a rel="prev" href="../using-git/how-to-create-and-use-tags.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
+
                             <a rel="next" href="../using-git/where-did-this-line-come-from.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
+
                         <div style="clear: both"></div>
                     </nav>
                 </div>
@@ -307,6 +311,7 @@ index 7956b65..a34f907 100644
                     <a rel="prev" href="../using-git/how-to-create-and-use-tags.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
+
                     <a rel="next" href="../using-git/where-did-this-line-come-from.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
@@ -314,18 +319,26 @@ index 7956b65..a34f907 100644
 
         </div>
 
-        <script type="text/javascript">
+
+
+
+        <script>
             window.playground_copyable = true;
         </script>
-        <script src="../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../searcher.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../book.js" type="text/javascript" charset="utf-8"></script>
+
+
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
+
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script type="text/javascript" src="../tabbed-code-blocks.js"></script>
-        <script type="text/javascript" src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../tabbed-code-blocks.js"></script>
+        <script src="../asciinema/asciinema-player.min.js"></script>
+
+
     </body>
 </html>
